<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/cart_icon_bar"
        android:title="Cart"
        app:showAsAction="always"
        app:actionLayout="@layout/cart_logo_design"/>
    <item
        android:id="@+id/history"
        android:orderInCategory="100"
        android:title="@string/history"
        app:showAsAction="never" />
    <item
        android:id="@+id/chng_passwrd"
        android:orderInCategory="101"
        android:title="@string/change_password"
        app:showAsAction="never" />
    <item
        android:id="@+id/logout"
        android:orderInCategory="102"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>
